@@ -1,7 +1,7 @@
-import Dependencies.*
+import Dependencies._
 import sbtrelease.ReleasePlugin.autoImport.ReleaseTransformations.*
 import sbtrelease.Version.Bump.Next
-import xerial.sbt.Sonatype.*
+import xerial.sbt.Sonatype._
 
 lazy val javacCompilerVersion = "11"
 
@@ -13,13 +13,34 @@ javacOptions ++= Seq(
 
 Test / javaOptions ++= Seq("-Dfile.encoding=UTF-8")
 
+Test / javaOptions ++= {
+  val heapSize = sys.env.get("HEAP_SIZE").getOrElse("4g")
+  val extraTestJavaArgs = Seq("-XX:+IgnoreUnrecognizedVMOptions",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.net=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+    "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+    "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+    "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED").mkString(" ")
+  s"-Xmx$heapSize -Xss4m -XX:ReservedCodeCacheSize=128m -Dfile.encoding=UTF-8 $extraTestJavaArgs"
+    .split(" ").toSeq
+}
+
 ThisBuild / sonatypeCredentialHost := "s01.oss.sonatype.org"
 
 lazy val scala212 = "2.12.18"
 
-lazy val scala213 = "2.13.12"
+lazy val scala213 = "2.13.13"
 
-lazy val supportedScalaVersions = List(scala212) // , scala213
+lazy val supportedScalaVersions = List(scala212, scala213)
 
  ThisBuild / crossScalaVersions := supportedScalaVersions
 
@@ -27,21 +48,24 @@ organization := "ai.starlake"
 
 organizationName := "starlake"
 
-ThisBuild / scalaVersion := scala212
+ThisBuild / scalaVersion := scala212 // scala213 scala212
 
 organizationHomepage := Some(url("https://github.com/starlake-ai/starlake"))
 
 resolvers ++= Resolvers.allResolvers
 
 libraryDependencies ++= {
-  val (spark, jackson, esSpark, pureConfigs) = {
+  val versionSpecificLibs = {
     CrossVersion.partialVersion(scalaVersion.value) match {
-      case Some((2, 12)) => (spark_3d0_forScala_2d12, jackson212ForSpark3, esSpark212, pureConfig212)
-      case Some((2, 13)) => (spark_3d0_forScala_2d12, jackson212ForSpark3, esSpark212, pureConfig212)
+      case Some((2, 12)) => Seq()
+      case Some((2, 13)) => scalaCompat
       case _ => throw new Exception(s"Invalid Scala Version")
     }
   }
-  dependencies ++ spark ++ jackson ++ esSpark ++ pureConfigs ++ scalaReflection(scalaVersion.value)
+  dependencies ++ spark_3d0_forScala_2d12 ++
+    jackson212ForSpark3 ++ esSpark212 ++
+    pureConfig212 ++ scalaReflection(scalaVersion.value) ++
+    versionSpecificLibs
 }
 
 dependencyOverrides := Seq(
@@ -67,6 +91,25 @@ assembly / assemblyJarName := s"${name.value}_${scalaBinaryVersion.value}-${vers
 Common.enableStarlakeAliases
 
 enablePlugins(Common.starlakePlugins: _*)
+
+
+scalacOptions ++= {
+  val extractOptions = {
+    CrossVersion.partialVersion(scalaVersion.value) match {
+      case Some((2, 12)) => Seq("-Xfatal-warnings")
+      case Some((2, 13)) =>  Seq()
+      case _ => throw new Exception(s"Invalid Scala Version")
+    }
+  }
+  Seq(
+    "-deprecation",
+    "-feature",
+    "-Xmacro-settings:materialize-derivations",
+    "-Ywarn-unused:imports"
+  ) ++ extractOptions
+
+}
+
 
 Common.customSettings
 
@@ -123,7 +166,7 @@ assembly / assemblyExcludedJars := {
       "httpclient-",
       "httpcore-",
       "jackson-datatype-jsr310-",
-      "json-",
+      "json-2",
       "jsr305-",
       "lz4-java-",
       // "protobuf-java-", // BigQuery needs com/google/protobuf/GeneratedMessageV3
